resolves vidwrap issues

--- a/src/components/TeamCerts/styles.module.scss
+++ b/src/components/TeamCerts/styles.module.scss
@@ -39,6 +39,11 @@
   align-items: center;
 
   position: relative;
+
+  & iframe {
+    width: 100%;
+    margin-top: 0;
+  }
 }
 
 .imgWrapper {
