--- a/src/components/Videos/styles.module.scss
+++ b/src/components/Videos/styles.module.scss
@@ -63,6 +63,11 @@ $breakpoints: (
 
   text-align: center;
   cursor:pointer;
+  
+  & iframe {
+    width: 100%;
+    margin-top: 0;
+  }
 }
 
 .courseVidwrap {
